<resources>
    <!--Start of Yomna -->
    <string name="app_name">GradProject</string>
    <string name="desc">Image</string>
    <string name="Splash_text">Delivery Man</string>
    <string name="availability">Availability</string>
    <string name="profile">Profile</string>

    <!--End of Yomna-->

    <!--Start of Asmaa-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintUserEmail">someone@example.com</string>
    <string name="hintPassword">*******</string>
    <string name="loginBtn">LogIn</string>
    <string name="welcomeTo">Welcome To</string>
    <string name="emptyEmail">Please enter your email</string>
    <string name="emptyPassword">Please enter your password</string>
    <string name="invalidEmail">Please enter valid Format for email</string>
    <string name="connectionError">No Connection</string>
    <string name="str_login_failed">Login Failed</string>
    <string name="str_ok_btn_label">OK</string>
    <string name="str_loading">loading</string>
    <string name="str_an_error_happend">Error Occurs</string>

    <!-- End of Asmaa -->


</resources>
